--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,46 @@
   font-family: Helvetcia, "Times New Roman", sans-serif;
 }
 
-.title {
+#title {
   background-color: green;
   color: rgb(255,0,0);
   font-size: 80px;
   text-align: center;
 }
 
-ul {
+#reg-list {
   color: blue;
   font-size: 24px;
+}
+
+.recipe-list {
+  color: red;
+  background-color: black;
+  font-size: 18px;
 }
 
 img {
   height: auto;
   width: 400px;
+}
+
+h1 {
+  font-size: 40px;
+  background-color: rgb(0,255,100);
+  color: rgb(205, 50, 120);
+}
+
+#chik {
+  color: yellow;
+  background-color: green;
+}
+
+#spag {
+  color: red;
+  background-color: yellow;
+}
+
+#old {
+  color: yellow;
+  background-color: brown;
 }
